# nalai_core

./: .gitignore  Cargo.toml
.github/workflows/: release.yml
http-downloader/src/extensions/: speed_tracker.rs  status_tracker.rs
nalai_info_data.sled/: db  snap.000000000000038F
src/: main.rs  main_archive.rs  play_ground.rs  start_download_archive.rs
src/down_wrapper/: download_provider.rs  mod.rs
src/handlers/: download.rs  exit.rs  health.rs  info.rs  mod.rs
src/models/: chunk_wrapper.rs  mod.rs  nalai_download_info.rs  nalai_result.rs  nalai_wrapper.rs  status_wrapper.rs
src/status_wrapper/: Cargo.toml
src/utils/: global_wrappers.rs  mod.rs  status_conversion.rs
