[package]
name = "nalai_core"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9", features = ["json", "blocking", "stream"] }
tokio = { version = "1", features = ["full", "macros", "rt"] }
futures = "0.3"
anyhow = "1.0.92"
url = "2.5.3"
indicatif = "0.17.8"
http-downloader = { version = "0.3.2", features = ["all-extensions"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
salvo = "0.74.0"
serde = "1.0.214"
serde_json = "1.0.132"
once_cell = "1.20.2"
base64 = "0.22.1"
